Use a portal to avoid pop-up truncation in dialogs

--- a/src/components/ComboBox.less
+++ b/src/components/ComboBox.less
@@ -29,14 +29,12 @@
 .ComboBox__list {
 	@elv-04();
 	position: absolute;
-	top: 31px;
-	width: 100%;
 	max-height: 15em;
 	border-radius: 3px;
 	padding: @sp-04 0;
 	overflow-x: hidden;
 	overflow-y: auto;
-	z-index: 1;
+	z-index: 1000;
 }
 
 .ComboBox__option {
