--- a/src/components/Select.less
+++ b/src/components/Select.less
@@ -62,14 +62,12 @@
 .Select__list {
 	@elv-04();
 	position: absolute;
-	top: 31px;
-	width: 100%;
 	max-height: 15em;
 	border-radius: 3px;
 	padding: @sp-04 0;
 	overflow-x: hidden;
 	overflow-y: auto;
-	z-index: 1;
+	z-index: 1000;
 }
 
 .Select__option {
